Update portfolio site with 2026

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#projects">Projects</a>
         <a href="#classes">Classes</a>
         <a href="#skills">Skills</a>
-        <a href="#experience">Work Experience</a>
+      <!-- <a href="#experience">Work Experience</a> -->
         <a href="#contact">Contact</a>
       </nav>
 
