Update portfolio site

--- a/index.html
+++ b/index.html
@@ -363,10 +363,9 @@
         <article class="rect-card rect-card--text">
           <div class="rect-info">
             <h3>Student Assistant — Computer Architecture, UC Davis</h3>
-            <p class="meta">Jun 2025 – Present</p>
+            <p class="meta">Jul 2025 – Present</p>
             <ul class="tight">
-              <li>Tutor for coursework involving FSMs, datapaths, cache, and CPU design in Logisim.</li>
-              <li>Helped students understand how instructions flow through hardware using clear written and verbal explanations.</li>
+              <li>Role means to advise students programming projects and support architecture projects involving FSMs, datapaths, cache, and CPU implementation in Logisim to better understand how instructions flow, communicating complex concepts clearly in both written and verbal explanations. </li>
             </ul>
           </div>
         </article>
